# azoth

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/backup-registry/: .env.example  .gitignore  README.md  foundry.toml
contracts/backup-registry/.cursor/rules/: architecture.mdc  solidity.mdc
contracts/backup-registry/script/: Deploy.s.sol  DeployBackupRegistry.s.sol  DeployLocal.s.sol  DeployMockERC20.s.sol  DeriveTestAddress.s.sol  README.md
contracts/backup-registry/script/.cursor/rules/: deployment.mdc
contracts/backup-registry/src/: BackupRegistry.sol  UserVault.sol
contracts/backup-registry/src/libraries/: EIP712Validator.sol
contracts/backup-registry/src/mocks/: MockERC20.sol
contracts/backup-registry/test/: BackupRegistry.t.sol  EIP712Validator.t.sol
crates/azoth/: Cargo.toml
crates/azoth-bus/: Cargo.toml  README.md
crates/azoth-bus/examples/: actor_mailbox.rs  async_consumer.rs  async_notifications.rs  consumer_group.rs  multi_consumer.rs  retention.rs  simple_consumer.rs  stream_processing.rs
crates/azoth-bus/src/: bus.rs  config.rs  consumer.rs  consumer_group.rs  error.rs  filter.rs  lib.rs  notification.rs  retention.rs  stream.rs
crates/azoth-cli/: Cargo.toml  README.md
crates/azoth-cli/src/: main.rs
crates/azoth-cli/src/commands/: migrate.rs  mod.rs  project.rs  status.rs
crates/azoth-core/: Cargo.toml
crates/azoth-core/src/: error.rs  event_log.rs  lib.rs  lock_manager.rs  observe.rs
crates/azoth-core/src/config/: canonical.rs  mod.rs  projection.rs  projector.rs
crates/azoth-core/src/traits/: canonical.rs  event.rs  mod.rs  projection.rs
crates/azoth-core/src/types/: event.rs  manifest.rs  meta.rs  mod.rs
crates/azoth-file-log/: Cargo.toml
crates/azoth-file-log/src/: lib.rs  store.rs
crates/azoth-lmdb/: Cargo.toml
crates/azoth-lmdb/src/: backup.rs  dead_letter_queue.rs  iter.rs  keys.rs  lib.rs  preflight_cache.rs  read_pool.rs  state_iter.rs  store.rs  txn.rs
crates/azoth-projector/: Cargo.toml
crates/azoth-projector/src/: lib.rs  projector.rs
crates/azoth-scheduler/: Cargo.toml  README.md
crates/azoth-scheduler/examples/: basic_scheduler.rs  checkpoint_service.rs  cron_tasks.rs
crates/azoth-scheduler/src/: config.rs  error.rs  event_applier.rs  events.rs  execution.rs  lib.rs  prelude.rs  projection.rs  schedule.rs  scheduler.rs  task_handler.rs
crates/azoth-scheduler/tests/: simple_test.rs
crates/azoth-sqlite/: Cargo.toml
crates/azoth-sqlite/src/: lib.rs  read_pool.rs  schema.rs  store.rs  txn.rs
crates/azoth-vector/: Cargo.toml  README.md
crates/azoth-vector/src/: extension.rs  lib.rs  migration.rs  search.rs  types.rs
crates/azoth-vector/tests/: integration_test.rs
crates/azoth/benches/: basic_benchmark.rs  preflight_cache_benchmark.rs  transaction_throughput.rs
crates/azoth/examples/: backup_restore.rs  basic_usage.rs  batch_processing.rs  circuit_breaker.rs  continuous_processor.rs  custom_errors.rs  custom_storage.rs  dlq_replay.rs  event_handlers.rs  event_processor_builder.rs  incremental_backup.rs  lambda_require.rs  lock_based_preflight.rs  migration_example.rs  shutdown_checkpoint.rs
crates/azoth/src/: backup.rs  checkpoint.rs  circuit_breaker.rs  db.rs  dead_letter_queue.rs  dlq_replayer.rs  event_format.rs  event_handler.rs  event_processor.rs  incremental_backup.rs  ipfs.rs  ipfs_storage.rs  lib.rs  migration.rs  onchain_registry.rs  prelude.rs  recovery_file.rs  transaction.rs  typed_values.rs  write_batch.rs
crates/azoth/tests/: checkpoint_roundtrip_test.rs  concurrency_safety_test.rs  deadlock_prevention_test.rs  encryption_compression_test.rs  event_handler_test.rs  integration_test.rs  migration_test.rs  parallelism_test.rs  preflight_cache_test.rs  read_pool_test.rs  stress_test.rs
docs/: ARCHITECTURE.md  FILE_EVENT_LOG.md  GETTING_STARTED.md  MIGRATIONS.md
scripts/: publish.sh
