[workspace]
resolver = "2"
members = [
    "crates/azoth-core",
    "crates/azoth-lmdb",
    "crates/azoth-sqlite",
    "crates/azoth-file-log",
    "crates/azoth-projector",
    "crates/azoth",
    "crates/azoth-scheduler",
    "crates/azoth-cli",
    "crates/azoth-vector",
    "crates/azoth-bus",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["johnny@empyrealsdk.com"]
license = "MIT"
repository = "https://github.com/empyrealapp/azoth"
homepage = "https://github.com/empyrealapp/azoth"
documentation = "https://docs.rs/azoth"
keywords = ["database", "event-sourcing", "embedded", "kv-store", "lmdb"]
categories = ["database-implementations", "data-structures"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"
toml = "0.8"

# Async runtime for stripe locking
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dashmap = "6.0"

# LMDB
lmdb = "0.8"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# File I/O
memmap2 = "0.9"

# Serialization
bincode = "1.3"
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack support

# Time
chrono = { version = "0.4", features = ["serde"] }

# Scheduler
cron = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Utilities
walkdir = "2.4"
sha2 = "0.10"
parking_lot = "0.12"

# Dev/test dependencies
tempfile = "3.0"
proptest = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Workspace crates
azoth-core = { version = "0.1.1", path = "crates/azoth-core" }
azoth-lmdb = { version = "0.1.1", path = "crates/azoth-lmdb" }
azoth-sqlite = { version = "0.1.1", path = "crates/azoth-sqlite" }
azoth-file-log = { version = "0.1.1", path = "crates/azoth-file-log" }
azoth-projector = { version = "0.1.1", path = "crates/azoth-projector" }
azoth-scheduler = { version = "0.1.1", path = "crates/azoth-scheduler" }
azoth-vector = { version = "0.1.1", path = "crates/azoth-vector" }
azoth-bus = { version = "0.1.1", path = "crates/azoth-bus" }
azoth = { version = "0.1.1", path = "crates/azoth" }
