[package]
name = "azoth-bus"
version = "0.1.0"
edition = "2021"
authors = ["Empyreal <team@empyreal.app>"]
description = "Multi-consumer pub/sub bus built on Azoth primitives"
license = "MIT OR Apache-2.0"

[dependencies]
azoth = { workspace = true }
azoth-core = { workspace = true }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
