[package]
name = "azoth-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-consumer pub/sub bus built on Azoth primitives"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
azoth = { workspace = true }
azoth-core = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
pin-project = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
