[package]
name = "azoth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and types for the Azoth embedded database"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
xxhash-rust = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
