[package]
name = "azoth-file-log"
version = "0.1.0"
edition = "2021"

[dependencies]
azoth-core = { path = "../azoth-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.0"
tracing-subscriber = "0.3"
