[package]
name = "azoth-file-log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File-based event log for Azoth"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
azoth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
fs4 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
