[package]
name = "azoth-lmdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LMDB-backed canonical store for Azoth"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
azoth-core = { workspace = true }
azoth-file-log = { workspace = true }
lmdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
