[package]
name = "azoth-projector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event projector for Azoth"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
azoth-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
