[package]
name = "azoth-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
azoth-core = { workspace = true }
azoth-projector = { workspace = true }
azoth = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
rusqlite = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { workspace = true }
