[package]
name = "azoth-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Task scheduler for Azoth database with cron support"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
azoth-core = { workspace = true }
azoth-projector = { workspace = true }
azoth = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
rusqlite = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
