[package]
name = "azoth-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
azoth-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
