[package]
name = "azoth-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vector similarity search extension for Azoth using sqlite-vector"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["database", "event-sourcing", "vector", "similarity-search", "embeddings"]
categories = ["database"]

[features]
default = []
# Enable integration tests that load the sqlite-vector extension (downloads from GitHub if needed)
has-vector-extension = []

[dependencies]
azoth-core = { workspace = true }
azoth-sqlite = { workspace = true }
rusqlite = { workspace = true, features = ["load_extension"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
azoth = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# For downloading sqlite-vector extension in integration tests (blocking only, no tokio)
ureq = { version = "2", default-features = false, features = ["native-tls"] }
zip = "2"
tar = "0.4"
flate2 = "1.0"
