[package]
name = "azoth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
azoth-core = { workspace = true }
azoth-lmdb = { workspace = true }
azoth-sqlite = { workspace = true }
azoth-file-log = { workspace = true }
azoth-projector = { workspace = true }

# Re-export dependencies for convenience
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }
parking_lot = "0.12"

[[bench]]
name = "transaction_throughput"
harness = false

[[bench]]
name = "basic_benchmark"
harness = false
